// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reply passes props 1`] = `
<Commentable
  body="#BODY"
  created={0}
  downvotes={0}
  foo="bar"
  owner="#OWNER"
  upvotes={0}
/>
`;

exports[`Reply renders default 1`] = `
<Commentable
  body="#BODY"
  created={0}
  downvotes={0}
  owner="#OWNER"
  upvotes={0}
/>
`;
